# AI-Usage-for-Windows

./: .env.example  CHANGELOG.md  LICENSE  README.md  copy-bundled.cjs  package.json  release-notes-v0.1.2.md  release-notes-v0.3.0.md  release-notes-v0.4.0.md  release-notes-v0.4.1.md
.github/workflows/: publish.yml
docs/mobile-sync/: 00_WINDOWS_ALIGNMENT_DESIGN.md  01_PRD.md  02_DATA_MODEL.md  03_PHASES.md  04_PROJECT_SPEC.md  기초 설계안.md
docs/providers/: antigravity.md  claude.md  copilot.md  gemini.md  grok.md  kimi.md  qwen.md  sakana.md
plugins/: test-helpers.js
plugins/antigravity/: plugin.js  plugin.json  plugin.test.js
plugins/claude/: plugin.js  plugin.json  plugin.test.js
plugins/codex/: plugin.json
plugins/copilot/: plugin.js  plugin.json  plugin.test.js
plugins/cursor/: plugin.js  plugin.json  plugin.test.js
plugins/gemini/: plugin.js  plugin.json  plugin.test.js
plugins/grok/: plugin.js  plugin.json  plugin.test.js
plugins/kimi/: plugin.js  plugin.json  plugin.test.js
plugins/qwen/: plugin.js  plugin.json  plugin.test.js
plugins/sakana/: plugin.js  plugin.json  plugin.test.js
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/Icon.icon/: icon.json
src-tauri/src/: lib.rs
src-tauri/src/local_http_api/: cache.rs
src-tauri/src/plugin_engine/: host_api.rs  manifest.rs
src/components/: provider-card.test.tsx  provider-card.tsx
src/lib/: firebase.test.ts  firebase.ts  mobile-sync.ts  plugin-types.ts  reset-tooltip.ts  settings.test.ts  settings.ts  tray-bars-icon.ts  tray-primary-progress.test.ts  tray-primary-progress.ts  tray-tooltip.test.ts  tray-tooltip.ts
(+12 files in other folders)
